- Fixed display of landscape orientation on mobile devices.

--- a/src/scss/components/section/_sections.scss
+++ b/src/scss/components/section/_sections.scss
@@ -95,6 +95,21 @@
     }
 }
 
+@media (max-width:$mediumWidth) and (orientation: landscape) {
+    .rotate {
+        background: #212121 url("/assets/img/rotate.jpg") no-repeat center;
+        background-size: 100% auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1000;
+        height: 100%;
+        width: 100%;
+    }
+}
+
 @include media-breakpoint-sm {
     .content {        
         margin-top: 6rem;
